--- a/index.html
+++ b/index.html
@@ -168,6 +168,9 @@ function requestChaPicInfo (chaPicId) {
             var left = $('#pic')[0].clientLeft;
 
             console.log('top='  + top + ' left=' + left);
+
+            var bounding = $('#pic')[0].getBoundingClientRect();
+            outputObj(bounding);
             return;
         } else if("x" in event) {
             pickPos = {
