--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ function requestChaPicInfo () {
                 continue; // skip
             }
 
-            var value = jsonList[sid];
+            var value = jsonList['sid'];
             var chaInfo = [];
             var pos_list = value['pos'].split(';');
            
