somthing done for taihe2

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ function requestChaPicInfo () {
             chaInfo ['height'] = stage['h'];
             chaInfo ['url'] = stage['url'];
 
-            pos_list.forEach(function(stage,i){
+            pos_list.forEach(function(pos_list,i){
             　　var tmp = stage.split(',')
                 chaInfo.push({
                     "x":tmp[0],
