somthing done for taihe2

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ function requestChaPicInfo () {
 
             var chaInfo = [];
             var pos_list = stage['pos'].split(';');
-           
+            chaInfo ['sid'] = stage['sid'];
             chaInfo ['width'] = stage['w'];
             chaInfo ['height'] = stage['h'];
             chaInfo ['url'] = stage['url'];
