somthing done for taihe2

--- a/index.html
+++ b/index.html
@@ -170,6 +170,8 @@ function requestChaPicInfo () {
             chaInfo ['width'] = stage['w'];
             chaInfo ['height'] = stage['h'];
             chaInfo ['url'] = stage['url'];
+            chaInfo ['dur'] = stage['dur'];
+            chaInfo ['fdur'] = stage['fdur'];
 
             pos_list.forEach(function(value,i){
             　　var tmp = value.split(',')
