somthing done for taihe2

--- a/index.html
+++ b/index.html
@@ -259,9 +259,9 @@ function requestChaPicInfo () {
             $('#wait_count_down_d1').hide();
         } else {
             $('#wait_count_down_d1').show();
-            $('#wait_count_down_d1').attr("src", "img/" + d1 + ".png");
+            $('#wait_count_down_d1').attr("src", "asset/" + d1 + ".png");
         }
-        $('#wait_count_down_d0').attr("src", "img/" + d0 + ".png");
+        $('#wait_count_down_d0').attr("src", "asset/" + d0 + ".png");
     }
 
     function onPickingUp(event) {
