somthing done for taihe2

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
     <div class="container" id="view_wait">
         <img src="asset/bg.jpg" class="img_bg"/>
+        <h2 class="title">下一局马上开始,不要走开哦~</h2>
         <section id="wait_count_down">
             <img id="wait_count_down_d1" class="wait_count_down_digit" src="" alt=""></img>
             <img id="wait_count_down_d0" class="wait_count_down_digit" src="" alt=""></img>
