--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 
     <div class="container" id="view_wait">
         <img src="asset/bg.jpg" class="img_bg"/>
-        <h2 class="title">下一局马上开始,不要走开哦~</h2>
+        <h2 id="action_name" class="title">欢乐找茬</h2>
+        <h2 id="wait_desc">精彩马上回来<br>倒计时</h2>
         <section id="wait_count_down">
             <img id="wait_count_down_d1" class="wait_count_down_digit" src="" alt=""></img>
             <img id="wait_count_down_d0" class="wait_count_down_digit" src="" alt=""></img>
@@ -39,7 +40,8 @@
 
     <div class="container" id="view_result">
         <img src="asset/bg.jpg" class="img_bg"/>
-        <h2 class="title">玩得不错啊, 亲~</h2>
+        <h2 class="title">欢乐找茬</h2>
+        <h2 id="result_desc">Edisonx邀您参与精彩互动<br>诚邀各种合作<br>详情垂询jerry.zhang@edisonx.cn</h2>
     </div>
 
     <div class="popup" id="view_tujian">
