--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ function requestChaPicInfo () {
             jsonType: "json",
             timeout: 10000,
             data: {
-                action:'query_c', 
+                action:'query', 
             },
             success: function (data) {
                 console.log('200ok');
