somthing done for taihe2

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ function requestChaPicInfo () {
             jsonType: "json",
             timeout: 10000,
             data: {
-                action:'query', 
+                action:'query', sid:CurStageId
             },
             success: function (data) {
                 console.log('200ok');
