--- a/index.html
+++ b/index.html
@@ -162,6 +162,8 @@ function requestChaPicInfo () {
                 break;
             }
         }
+
+        console.log('to ' + ActionRedirect);
         document.getElementById('action_name').innerHTML = ActionName;
         document.getElementById('result_title').innerHTML = ActionName;
         document.getElementById('btn_join').display = ((ActionRedirect == null) ? 'none' : 'block');
