somthing done for taihe2

--- a/index.html
+++ b/index.html
@@ -201,7 +201,8 @@ function requestChaPicInfo () {
 
             StageList.push(chaInfo);
         }
-
+        console.log (JSON.stringify(StageList));
+        
         return foundCurId;
     }
     
