--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@ function requestChaPicInfo () {
     }
 
     function parseStageList (jsonList) {
+        console.log('parseStageList');
         var foundCurId = false;
         for (var i=0; i< jsonList.length; i ++) {
             var stage = jsonList[i];
