somthing done for taihe2

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ function requestChaPicInfo () {
     function searchCurAction (actions) {
         ActionName = '欢乐找茬';
         ActionRedirect = null;
-        
+        console.log ("searchCurAction");
         console.log (JSON.stringify(actions));
 
         for(var aid in actions){
