somthing done for taihe2

--- a/index.html
+++ b/index.html
@@ -470,8 +470,10 @@ function requestChaPicInfo () {
     }
 
     function onTuJian() {
+        console.log('onTuJian');
         var viewTJ = document.getElementById('btn_tujian');
         viewTJ.style.display = 'block';
     }
+    
 </script>
 </html>
