somthing done for taihe2

--- a/index.html
+++ b/index.html
@@ -471,9 +471,9 @@ function requestChaPicInfo () {
 
     function onTuJian() {
         console.log('onTuJian');
-        var viewTJ = document.getElementById('btn_tujian');
+        var viewTJ = document.getElementById('view_tujian');
         viewTJ.style.display = 'block';
     }
-    
+
 </script>
 </html>
